two columns solved

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- YOUR CONTENT HERE -->
 
-<!-- <section class="two"> -->
+<section class="two">
 <p>
 Nos Beaux-Arts <br> ont été institués, <br> et leurs types comme leur usage fixés, dans un temps bien distinct du nôtre, par des hommes dont le pouvoir d’action <br> sur les choses était insignifiant auprès  <br> de celui que nous possédons. <br>
 Mais l’étonnant accroissement de nos moyens, la souplesse et la précision qu’ils atteignent, les idées et les habitudes qu’ils introduisent nous assurent de changements prochains et très profonds dans l’antique industrie du Beau. <br>
@@ -62,7 +62,7 @@ Une collection développée en collaboration avec la Bibliothèque
 Paul-Émile-Boulet de l’Université du Québec <br> à Chicoutimi<br>
 [http ://bibliotheque.uqac.uquebec.ca/index.htm]
 </p>
-<!-- </section> -->
+</section>
 
     <!-- <img class="mon-image" src="images/mon-image.jpg"/> -->
 
