--- a/index.html
+++ b/index.html
@@ -1,71 +1,68 @@
 <!DOCTYPE html PUBLIC>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <title>THESIS</title>
 
-    <!-- Metadata -->
-    <meta name="robots" content="noindex, nofollow">    
-    <meta name="author" content="" />
-    <meta name="copyright" content="" />
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta http-equiv="Content-Style-Type" content="text/css" />
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+  <title>THESIS</title>
 
-    <!-- Paged.js -->
-    <link rel="stylesheet" type="text/css" href="css/pagedjs/pagedjs.css">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <script src="js/paged.polyfill.js"></script>
-    <script src="js/handlers.js"></script>
+  <!-- Metadata -->
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="author" content="" />
+  <meta name="copyright" content="" />
 
-    <!-- Style -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- Paged.js -->
+  <link rel="stylesheet" type="text/css" href="css/pagedjs/pagedjs.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <script src="js/paged.polyfill.js"></script>
+  <script src="js/handlers.js"></script>
 
-    <!-- Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- Style -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- Fonts -->
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet"> -->
 
-  </head>
+</head>
 
-  <body>
-
-
-    <!-- YOUR CONTENT HERE -->
-
-<section class="two">
-<p>
-Nos Beaux-Arts <br> ont été institués, <br> et leurs types comme leur usage fixés, dans un temps bien distinct du nôtre, par des hommes dont le pouvoir d’action <br> sur les choses était insignifiant auprès  <br> de celui que nous possédons. <br>
-Mais l’étonnant accroissement de nos moyens, la souplesse et la précision qu’ils atteignent, les idées et les habitudes qu’ils introduisent nous assurent de changements prochains et très profonds dans l’antique industrie du Beau. <br>
-
-Il y a dans tous les arts une partie physique qui ne peut plus être regardée ni traitée comme naguère, qui ne peut pas être soustraite aux entreprises de la connaissance et de la puissance modernes. <br> Ni la matière, ni l’espace, ni le temps ne sont depuis vingt <br> ans ce qu’ils étaient depuis toujours. Il faut s’attendre <br> que de si grandes nouveautés transforment toute la technique des arts, agissent par là sur l’invention elle-même, aillent peut-être jusqu’à modifier merveilleusement la notion même de l’art.
-
-Sans doute ce ne seront d’abord que <br> la reproduction et la transmission <br> des œuvres qui se verront affectées. <br> On saura transporter ou reconstituer <br> en tout lieu le système de sensations, <br> – ou plus exactement, le système d’excitations, – que dispense en un lieu quelconque un objet ou un événement quelconque. Les œuvres acquerront une sorte d’ubiquité. Leur présence immédiate ou leur restitution à toute époque obéiront à notre appel. Elles <br> ne seront plus seulement dans elles-mêmes, mais toutes où quelqu’un sera, et quelque appareil.
-Elles ne seront plus que des sortes de sources ou des origines, et leurs bienfaits se trouveront ou se retrouveront entiers où l’on voudra. Comme l’eau, comme <br> le gaz, comme le courant électrique viennent de loin dans nos demeures répondre à nos besoins moyennant <br> un effort quasi nul, ainsi serons-nous alimentés d’images visuelles ou auditives, naissant et s’évanouissant <br> au moindre geste, presque à un signe. Comme nous sommes accoutumés, <br> si ce n’est asservis, à recevoir chez nous l’énergie sous diverses espèces, ainsi trouverons-nous fort simple d’y obtenir ou d’y recevoir ces variations ou oscillations très rapides dont les organes de nos sens qui les cueillent <br> et qui les intègrent font tout ce que nous savons. Je ne sais si jamais philosophe a rêvé d’une société pour <br> la distribution de Réalité Sensible à domicile.
-La Musique, entre tous les arts, est le plus près d’être transposé dans le mode moderne. Sa nature <br> et la place qu’elle tient dans le monde <br> la désignent pour être modifiée la première dans ses formules de distribution, de reproduction et même de production. Elle est de tous les arts le plus demandé, le plus mêlé à l’existence sociale, le plus proche <br> de la vie dont elle anime, accompagne ou imite le fonctionnement organique. Qu’il s’agisse de la marche ou de la parole, de l’attente ou de l’action, <br> du régime ou des surprises de notre durée, elle sait en ravir, en combiner, en transfigurer les allures et les valeurs sensibles. Elle nous tisse un temps <br> de fausse vie en effleurant les touches de la vraie. On s’accoutume à elle, <br> on s’y adonne aussi délicieusement qu’aux substances justes, puissantes <br> et subtiles que vantait Thomas de Quincey. Comme elle s’en prend directement à la mécanique affective dont elle joue et qu’elle manœuvre <br> à son gré, elle est universelle par essence ; elle charme, elle fait danser sur toute la terre. Telle que la science, elle devient besoin et denrée internationaux. Cette circonstance, jointe aux récents progrès dans les moyens de transmission, suggérait deux problèmes techniques :
-<br> I. – Faire entendre en tout point du globe, dans l’instant même, une œuvre musicale exécutée n’importe où.
-<br> II. – En tout point du globe, et à tout moment, restituer à volonté une œuvre musicale.
-Ces problèmes sont résolus. Les solutions se font chaque jour plus parfaites.
-
-Nous sommes encore assez loin d’avoir apprivoisé à ce point les phénomènes visibles. La couleur et le relief sont encore assez rebelles. Un soleil qui se couche sur <br> le Pacifique, un Titien qui est à Madrid ne viennent pas encore se peindre sur le mur <br> de notre chambre aussi fortement et trompeusement que nous y recevons une symphonie.
-Cela se fera. Peut-être fera-t-on mieux encore, et saura-t-on nous faire voir quelque chose de ce qui est au fond de la mer. Mais quant à l’univers de l’ouïe, les sons, les bruits, les voix, les timbres nous appartiennent désormais. Nous les évoquons quand et où il nous plaît. Naguère, nous ne pouvions jouir de la musique à notre heure même, et selon notre humeur. Notre jouissance devait s’accommoder d’une occasion, d’un lieu, d’une date et d’un programme. Que de coïncidences fallait-il ! 
-C’en est fait à présent d’une servitude si contraire au plaisir, et par là si contraire <br> à la plus exquise intelligence des œuvres. Pouvoir choisir le moment d’une jouissance, la pouvoir goûter quand elle est non seulement désirable par l’esprit, mais exigée et comme déjà ébauchée par l’âme et par l’être, c’est offrir les plus grandes chances aux intentions du compositeur, car c’est permettre à ses créatures de revivre dans un milieu vivant assez peu différent de celui de leur création. Le travail de l’artiste musicien, auteur ou virtuose, trouve dans la musique enregistrée la condition essentielle du rendement esthétique le plus haut.
-Il me souvient ici d’une féerie que j’ai vue enfant dans un théâtre étranger. Ou que je crois d’avoir vue. Dans le palais de l’Enchanteur, les meubles parlaient, chantaient, prenaient <br> à l’action une part poétique et narquoise. <br> Une porte qui s’ouvrait sonnait une grêle <br> ou pompeuse fanfare. On ne s’asseyait sur <br> un pouf, que le pouf accablé ne gémît quelque politesse. Chaque chose effleurée exhalait une mélodie.
-J’espère bien que nous n’allons point à cet excès de sonore magie. Déjà l’on ne peut plus manger ni boire <br> dans un café sans être troublés de concerts. Mais il sera merveilleusement doux de pouvoir changer à son gré une heure vide, une éternelle soirée, un dimanche infini, <br> en prestiges, en tendresses, en mouvements spirituels.
-Il est de maussades journées ; <br> il est des personnes fort seules, et il n’en manque point que l’âge ou l’infirmité enferment avec elles-mêmes qu’elles ne connaissent que trop. Ces vaines et tristes durées, et ces êtres voués aux bâillements <br> et aux mornes pensées, les voici maintenant en possession d’orner ou de passionner leur vacance.
-Tels sont les premiers fruits que nous propose l’intimité nouvelle de la Musique avec la Physique, dont l’alliance immémoriale nous avait déjà tant donné. <br> On en verra bien d’autres.
-</h5>
+<body>
 
 
-<b>Paul Valéry</b>, <i>La conquête de l’ubiquité</i>, 1928.<br>
-Source : Une édition électronique réalisée à partir du texte de <br> Paul Valéry, « La conquête de l’ubiquité » (1928), in Œuvres, tome II, <br> Pièces sur l’art, Nrf, Gallimard, Bibl. de la Pléiade, 1960, 1726 pages, pp. 1283-1287. Paru dans De la musique avant toute chose, Éditions <br> du Tambourinaire, 1928.
-Une collection développée en collaboration avec la Bibliothèque
-Paul-Émile-Boulet de l’Université du Québec <br> à Chicoutimi<br>
-[http ://bibliotheque.uqac.uquebec.ca/index.htm]
-</p>
-</section>
+  <!-- YOUR CONTENT HERE -->
 
-    <!-- <img class="mon-image" src="images/mon-image.jpg"/> -->
+  <!-- <div class="one">
+    <h2>
+      Introduction
+    </h2>
+  </div> -->
 
-  </body>
-  
+  <div class="two">
+    <h2>
+      Introduction
+    </h2>
+    
+    <p>
+      Over the last three decades, the exponential development of technology has impacted all creative practices and has radically changed graphic design perspectives. The revolution brought about by the rise of the personal computer, particularly the release of the first Macintosh in 1984, created new opportunities for graphic design research and production, opening the path to methodological and esthetical experimentations. Nevertheless, the transition between the two centuries marked a pivot and revealed the exhaustion of that momentum, which mutated into a manifest crisis of creative methodologies. Companies like Apple, Adobe, and, years later, Google have been the driving force behind the technological revolution in design. However, in their effort to provide access to easy-to-use computers, interfaces, and tools, they have participated in the standardization of design esthetics, and fostered the commodification of design culture instead of its democratization.
+In 2012, Kevin Donnot published the article “Code = design,”  an excerpt of his master’s thesis “Outils numériques et design graphique” (Digital Tools and Graphic Design). The essay questions the tools largely employed in the graphic design practice and, by extension, the practice itself. Restrained by the limitations of the massified software and submitted to the monopolization of devices that occurred in the early 2000s, the graphic designer must reclaim, Donnot stated, his status as a craftsperson and reappropriate the tools of creation.  Indeed, the standardization of the tools would translate to a normalization of graphic production and its esthetic.  To foster originality the graphic designer must become the maker of the creative tools. Programming and free software seem a possible alternative to reclaim this active role: “The interest of the free software [is that] the designer can integrate new functions and, above all, understand how the software works. Then, s/he is not lowered to a role of ‘user’ or ‘consumer’ and condemned to technical passivity. S/he moves from the status of consumer to the one of creator.” 
+Ten years after its release, Donnot mentioned Processing as being one of the programming languages and environments, within the free software movement, which represented an interesting alternative for graphic design: “The software proposes a new space for visual experimentation where the design is controlled by code. […] This alternative approach implies alternative creative processes and, therefore, alternative graphical propositions.”  Finally, Processing had crossed the Atlantic and was recognized as ambassador of the free and open source software movement, and as legitimate tool for the graphic design practice.
+
+Conceived at the Massachusetts Institute of Technology (MIT) by Casey Reas and Ben Fry and built on the shoulders of prestigious predecessors such as Muriel Cooper and John Maeda, the first version of Processing was released in 2001. An easy-to-use, accessible coding language and programming environment, Processing was created to provide an educational tool for learning the graphic design principles, such as color and composition, through the medium of computation.  Intended for artists and designers, Reas and Fry’s proposition fostered the idea of “learning to create software” as opposed to “learning to use software,” suggesting a practical solution to the crisis of design methodologies of the late 1990s.  From the onset, Processing was quickly adopted by professionals who embraced its potential as a modular, expandable, and customizable kit.  Its auto-productive methodology echoed Do It Yourself (DIY) and hackers’ approaches and it opened the path to a renewal of the crafts in the design practice, resulting in a hybridization of analog and digital methods of productions.  
+Nevertheless, the core idea of Processing is even more radical, and its moral extent that “emerged within the culture of free software” defines its approach and “differentiates [it] from proprietary, consumer-driven software.”  Processing stands alongside the free/libre and open source software ideology and promotes the ideas of freedom and accessibility as essential. This position distances the project from purely esthetic considerations, adding a moral dimension in extending methodology to ideology. In the last decade, a community has grown. The work done by the community has provided new meanings to the expression “open source,” and has fostered a new vision of shared and decentralized collaboration, in fields that not only deal with software development. 
+
+Within this context, this thesis investigates, through the prism of graphic design, how Processing and the community built around it have transformed the design field and influenced the current generation of designers. Providing new perspectives to expand creativity and stand against the normalization of design imposed by design monopolies, Processing can be considered a pivot, this research postulates, in the dialectic opposition between the free open source and the start-up cultures, both interlaced within the graphic design field. 
+The first chapter defines and contextualizes the opposition between start-up and free open source cultures, which arose in Silicon Valley and MIT between the 1970s and the beginning of the new century. The analysis of cases such as Apple Computer, Adobe Systems, and Google Design exemplifies the paradox of the start-up model, highlighting its metamorphosis from a counterculture into a monopoly. The review of core texts by the leading actors of the hacker, free software, and open source movements clarifies the misconception of free and open source culture and recognizes Processing as an advocate for a free and decentralized approach.
+The second part of this research focuses on Processing and the community developed around it over the last twenty years. From Muriel Cooper and John Maeda to Casey Reas and Ben Fry, this chapter first describes Processing’s origins at MIT. By analyzing the platform’s main components—language, environment, community—the chapter examines how Processing has expanded the concept of accessibility, questioning its economic, social, and political aspects, and has fostered values of inclusion as a critical part of the project.
+Finally, this research describes in its third chapter how the free open source culture and the system of values fostered by Processing influenced contemporary designers, contributing to the emergence of new patterns in the graphic design field. Through the reappropriation of the creative tools, contemporary designers distance their productions from standardized esthetics and reveal alternative methodologies that encompass values of accessibility and inclusion as a central part of their work. These methodologies, including the hybridization of production tools, DIY distribution methods, participatory generative design, and the use of cyberspace as a free framework, are valid propositions for a practice renewal based on responsibility and flexibility.
+To solve the perpetual struggle of graphic designers’ position, often tugged between radical polarities—design research on one side and design industry on the other—this thesis highlights alternative perspectives encompassing the acceptance of the profession’s paradox and the awareness of the designers’ responsibility in contemporary society.
+
+    </p>
+  </div>
+
+  <!-- <img class="mon-image" src="images/mon-image.jpg"/> -->
+
+</body>
+
 </html>
