--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
   <div class="wrapper">
 
     <div class="one">
-      <p><b><em>test of caption.</em> Over the last three decades, the exponential development of technology has impacted all creative practices and
-      has radically changed graphic design perspectives.</b></p>
+      <p><span class="footnote"> test of caption.Over the last three decades, the exponential development of technology has impacted all creative practices and
+      has radically changed graphic design perspectives.</span></p>
     </div>
     
   <div class="two">
    
     <div class="oneCol">
-        <h1>Over the last three decades,</h1>
+        <h1>Introduction</h1>
     </div>    
     
     <div class="twoCol">
-        <p>the exponential development of technology has impacted all creative practices and
-        has radically changed graphic design perspectives. <span class="footnote">The revolution brought about by the rise of the personal</span>
+        <p>Over the last three decades, the exponential development of technology has impacted all creative practices and
+        has radically changed graphic design perspectives. <span class="caption">The revolution brought about by the rise of the personal</span>
         computer, particularly the release of the first Macintosh in 1984, created new opportunities for graphic design
         research and production, opening the path to methodological and esthetical experimentations. Nevertheless, the
         transition between the two centuries marked a pivot and revealed the exhaustion of that momentum, which mutated
