Introduction Basic Implementation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="wrapper">
 
     <div class="one">
-      <p><span class="footnote"> test of caption.Over the last three decades, the exponential development of technology has impacted all creative practices and
+      <p><span class="footnote"> <span class="caption">[1]</span>test of footnote.Over the last three decades, the exponential development of technology has impacted all creative practices and
       has radically changed graphic design perspectives.</span></p>
     </div>
     
@@ -48,7 +48,7 @@
     
     <div class="twoCol">
         <p>Over the last three decades, the exponential development of technology has impacted all creative practices and
-        has radically changed graphic design perspectives. <span class="caption">The revolution brought about by the rise of the personal</span>
+        has radically changed graphic design perspectives. The revolution brought about by the rise of the personal
         computer, particularly the release of the first Macintosh in 1984, created new opportunities for graphic design
         research and production, opening the path to methodological and esthetical experimentations. Nevertheless, the
         transition between the two centuries marked a pivot and revealed the exhaustion of that momentum, which mutated
@@ -56,7 +56,7 @@
         been the driving force behind the technological revolution in design. However, in their effort to provide access
         to easy-to-use computers, interfaces, and tools, they have participated in the standardization of design
         esthetics, and fostered the commodification of design culture instead of its democratization.
-        In 2012, Kevin Donnot published the article “Code = design,” an excerpt of his master’s thesis “Outils
+        In 2012, Kevin Donnot published the article “Code = design,” <span class="caption">[1]</span> an excerpt of his master’s thesis “Outils
         numériques et design graphique” (Digital Tools and Graphic Design). The essay questions the tools largely
         employed in the graphic design practice and, by extension, the practice itself. Restrained by the limitations of
         the massified software and submitted to the monopolization of devices that occurred in the early 2000s, the
