intro with baseline

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- Paged.js -->
   <link rel="stylesheet" type="text/css" href="css/pagedjs/pagedjs.css">
   <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/pagedjs/interface/baseline.css">
   <script src="js/paged.polyfill.js"></script>
   <script src="js/handlers.js"></script>
 
@@ -57,13 +58,7 @@
       <div class="oneCol">
         <h1>Introduction: let's see what happens if the title is long</h1>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
+      
       <div class="twoCol">
         <p>Over the last three decades, the exponential development of technology has impacted all creative practices
           and
