with javascript for footnotes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="css/pagedjs/interface/baseline.css">
   <script src="js/paged.polyfill.js"></script>
   <script src="js/handlers.js"></script>
+  <script src="js/footnotes.js"></script>
 
   <!-- Style -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
